# maglib-python

./: README.md  pyproject.toml
src/maglib/: __init__.py
src/maglib/nlp/: jatext_normalizer.py
